overflow in listing bug fix

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,7 +10,7 @@ html{
 body {
 	background-color: #f5f5f5;
 	font-family: 'Poppins', sans-serif;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .navbar{
